@@ -1,5 +1,8 @@
 2004-02-03  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13925
+	* g++.dg/template/lookup5.C: New test.
+
 	PR c++/14002
 	* g++.dg/parse/template13.C: New test.
 
